--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
   <body>
     <script src="sketch.js"></script>
     <script src="virus.js"></script>
-
+    <script src="emoji.js"></script>
 </body></html>
