마우스 객체 추가
마우스 객체 추가

--- a/index.html
+++ b/index.html
@@ -9,4 +9,5 @@
     <script src="sketch.js"></script>
     <script src="virus.js"></script>
     <script src="emoji.js"></script>
+    <script src="repeller.js"></script>
 </body></html>
